tests/error/type_errors/if_not_bool.err
Guppy compilation failed. Error in file $FILE:12

10:    @module
11:    def foo(x: NonBool) -> int:
12:        if x:
              ^
GuppyTypeError: Expression of type `NonBool` cannot be interpreted as a `bool`
